# sqlglot

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.dynamic  Frontend_with_dbTable.py  Jenkinsfile  TRANSPILER.md  Taskfile.yml  converter_api.py  docker-compose.yml  dockerRun_readme.md  entrypoint.sh  error_handler.py  final_testing.py  first_query.sql  formatting_utils.py  frontend.py  frontend_with_dbTable.py  instant_test_e6.py  internal_testing.py  jenkins_cd_transpiler  k8s_entrypoint.py  log_collector.py  main.py  mypy.ini  optimal_lakehouse_integration.md  output.txt  pyproject.toml  requirements.txt  run.py  setup.cfg  setup.py  sonar-project.properties  test_deployment.py  testing.py  testing4.py  testing5.py  testing6.py  testing_none.py  (+3 more)
api-tests/: conftest.py
apis/: app.py  batch_manager.py  config.py  context.py
automated_processing/: Dockerfile.worker  __init__.py  docker-compose.yml  iceberg_handler.py  orchestrator.py  requirements.txt  start_worker.sh  statistics.py  tasks.py  worker.py
compose/: docker-compose.yml  greptime-config.toml  init-logs-table.sql  log-pipeline.yaml  prometheus.yml  vector.toml
distributed_processing/: BATCH_PROCESSING_ARCHITECTURE.md  DISTRIBUTED_PROCESSING_GUIDE.md  celery_worker.py  config.json  orchestrator.py  redis_manager.py  requirements.txt  run.sh  setup.sh  test.py
final_distributed_processing/: README.md  api_endpoints.py  batch_processor.py  celery_worker.py  config.py  iceberg_handler.py  requirements.txt  session_manager.py  test_system.py
gaurdrail/: __init__.py  main.py  setup.py
(+193 files in other folders)
